--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "ts-node src/index.ts"
+  },
   "dependencies": {
+    "dotenv": "^17.2.0",
     "eslint": "^9.30.1",
     "express": "^5.1.0",
     "prettier": "^3.6.2",
