--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "test": "jest",
+    "lint": "eslint src/**/*.ts"
   },
   "dependencies": {
     "dotenv": "^17.2.0",
@@ -16,7 +18,11 @@
     "zod": "^4.0.3"
   },
   "devDependencies": {
+    "@stylistic/eslint-plugin": "^5.1.0",
     "@types/express": "^5.0.3",
-    "@types/node": "^24.0.13"
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.0.13",
+    "jest": "^30.0.4",
+    "ts-jest": "^29.4.0"
   }
 }
