--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "eslint src/**/*.ts"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.23",
+    "ai": "^4.3.17",
+    "chalk": "^5.4.1",
     "dotenv": "^17.2.0",
     "eslint": "^9.30.1",
     "express": "^5.1.0",
+    "node-fetch": "^3.3.2",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
-    "zod": "^4.0.3"
+    "zod": "^4.0.5",
+    "zod3": "npm:zod@^3.23.8"
   },
   "devDependencies": {
     "@stylistic/eslint-plugin": "^5.1.0",
@@ -23,6 +28,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.13",
     "jest": "^30.0.4",
-    "ts-jest": "^29.4.0"
+    "ts-jest": "^29.4.0",
+    "typescript-eslint": "^8.36.0"
   }
 }
