--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
         "allowJs": true
     },
     "include": [
-        "src/**/*.ts"
+        "src/**/*.ts",
+        "src/testTheFlow.ts"
     ],
     "exclude": [
         "node_modules",
